Gruppe H erstellt, Painter Gruppe H eingefügt @Gruppe C, bitte die nichtmehr verwendeten Ordner "aus Projekt ausschließen"

--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Classes\TicTacToe\BaseTicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GB_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\G_TicTacToe.cs" />
+    <Compile Include="Classes\TicTacToe\H_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\TicTacToe.cs" />
     <Compile Include="Interfaces\Gruppe C\C_TicTacToe.cs" />
     <Compile Include="Interfaces\IGamePlayer.cs" />
