--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -98,11 +98,18 @@
     <Compile Include="Classes\GruppeI\I_Painter.cs" />
     <Compile Include="Classes\GruppeI\I_Player.cs" />
     <Compile Include="Classes\GruppeI\I_Rules.cs" />
+    <Compile Include="Classes\GruppeJ\Dino_Game.cs" />
     <Compile Include="Classes\GruppeJ\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Classes\GruppeJ\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GruppeJ\Dino_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\GruppeJ\Dino_Form.Designer.cs">
+      <DependentUpon>Dino_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Gruppe_F\ITimeStamp.cs" />
     <Compile Include="Classes\Gruppe_F\PainterF.cs" />
@@ -142,6 +149,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Classes\GruppeJ\Dino_Form.resx">
+      <DependentUpon>Dino_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\GruppeJ\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -172,6 +182,18 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dead.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\obstacle-1.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\obstacle-2.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\running.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
