--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -90,6 +90,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Assets\G\noinput.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Assets\G\noinput.Designer.cs">
+      <DependentUpon>noinput.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Assets\G\MaxSizeWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Assets\G\MaxSizeWindow.Designer.cs">
+      <DependentUpon>MaxSizeWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Gruppe B\B_Painter.cs" />
     <Compile Include="Classes\Gruppe B\B_Pong\B_Ball_Pong.cs" />
     <Compile Include="Classes\Gruppe B\B_Pong\B_Paddle_Pong.cs" />
@@ -181,6 +193,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Assets\G\noinput.resx">
+      <DependentUpon>noinput.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\G\MaxSizeWindow.resx">
+      <DependentUpon>MaxSizeWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\GruppeJ\Dino_Form.resx">
       <DependentUpon>Dino_Form.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,6 +259,9 @@
     <EmbeddedResource Include="Assets\K\PanzerR.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\G\noinput.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
