--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -74,8 +74,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\GruppeJ\Dino_Form.cs" />
+    <Compile Include="Classes\GruppeJ\Dino_Form.Designer.cs">
+      <DependentUpon>Dino_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GruppeJ\Dino_Game.cs" />
+    <Compile Include="Classes\GruppeJ\Form1.cs" />
+    <Compile Include="Classes\GruppeJ\Form1.designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GruppeJ\Form11.Designer.cs" />
+    <Compile Include="Classes\GruppeJ\GJ_DinoGame.cs" />
+    <Compile Include="Classes\GruppeJ\G[J]_TicTacToe.cs" />
     <Compile Include="Classes\Gruppe_F\HumanPlayer.cs" />
-    <Compile Include="Classes\Gruppe K\K_RulesPanzer.cs" />
+    <Compile Include="Interfaces\Gruppe J\GJ_IDino.cs" />
     <Compile Include="System\Windows\Forms\PictureBox1.cs" />
     <Page Include="Classes\Gruppe K\Form\K_InformationWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -145,27 +157,12 @@
     <Compile Include="Classes\GruppeI\PlayerI.cs" />
     <Compile Include="Classes\GruppeI\TTTField.cs" />
     <Compile Include="Classes\GruppeI\I_Painter.cs" />
-    <Compile Include="Classes\GruppeJ\Dino_Game.cs" />
-    <Compile Include="Classes\GruppeJ\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Classes\GruppeJ\Form1.designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Classes\GruppeJ\Dino_Form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Classes\GruppeJ\Dino_Form.Designer.cs">
-      <DependentUpon>Dino_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Classes\GruppeJ\GJ_DinoGame.cs" />
     <Compile Include="Classes\Gruppe_F\InterfacesGruppeF.cs" />
     <Compile Include="Classes\Gruppe_F\PainterF.cs" />
     <Compile Include="Classes\Gruppe_F\RulesF.cs" />
     <Compile Include="Classes\Gruppe_F\TTTComputerPlayerF_v1_2.cs" />
     <Compile Include="Classes\Gruppe_F\TTTComputerPlayerF.cs" />
     <Compile Include="Classes\TicTacToe\BaseTicTacToe.cs" />
-    <Compile Include="Classes\GruppeJ\G[J]_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\GB_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\G_TicTacToe.cs" />
     <Compile Include="Classes\TicTacToe\TicTacToe.cs" />
@@ -177,7 +174,6 @@
     <Compile Include="Interfaces\Gruppe B\PongInterfaces\IPongFieldB.cs" />
     <Compile Include="Interfaces\Gruppe E\I_E_4Gewinnt.cs" />
     <Compile Include="Interfaces\Gruppe H\I_H_TicTacToeField.cs" />
-    <Compile Include="Interfaces\Gruppe J\GJ_IDino.cs" />
     <Compile Include="Interfaces\Gruppe K\IK_HumanPlayer.cs" />
     <Compile Include="Interfaces\Gruppe K\IK_PaintGameObject.cs" />
     <Compile Include="Interfaces\Gruppe K\IK_GameField.cs" />
