--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -74,12 +74,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Classes\GruppeJ\Dino_Form.cs" />
+    <Compile Include="Classes\GruppeJ\Dino_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Classes\GruppeJ\Dino_Form.Designer.cs">
       <DependentUpon>Dino_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\GruppeJ\Dino_Game.cs" />
-    <Compile Include="Classes\GruppeJ\Form1.cs" />
+    <Compile Include="Classes\GruppeJ\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Classes\GruppeJ\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
