Von uns entfernter Code aus alten Commit wieder hinzugefügt

--- a/OOPGames/OOPGames/OOPGames.csproj
+++ b/OOPGames/OOPGames/OOPGames.csproj
@@ -74,6 +74,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Classes\Gruppe C\C_Painter.cs" />
     <Compile Include="Classes\GruppeJ\Dino_Form.cs">
       <SubType>Form</SubType>
     </Compile>
